tests/src/frontend/typechecking/invalid/readonly_lambda_4.sk
mutable class Foo(v: () -> Int)
fun no(foo: readonly Foo): void {
  _ = foo.v
}
